redis-manifest.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stedi-samantha
spec:
  selector:
    matchLabels:
      app: redis-stedi-samantha  # has to match .spec.template.metadata.labels
  serviceName: redis-stedi-samantha
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-stedi-samantha  # has to match .spec.selector.matchLabels
    spec:
      containers:
        - name: redis-stedi-samantha
          image: redis:7.0.5-alpine
          imagePullPolicy: Always
          args: ["--requirepass", "$(REDIS_PASS)", "--appendonly", "yes", "--save", "900", "1", "--save", "30", "2"]
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis-samantha-volume
              mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: redis-samantha-volume
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-stedi-samantha
spec:
  ports:
    - port: 6379
      name: redis
  clusterIP: None
  selector:
    app: redis-stedi-samantha
