prod-manifest.yaml
#© 2021 Sean Murdock

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-stedi-samantha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-stedi-samantha
  template:
    metadata:
      labels:
        app: prod-stedi-samantha
    spec:
      containers:
        - name: prod-stedi-samantha
          image: gcr.io/cubs-consulting/stedi #This image needs to refer to the NEW artifact registry repo that we need to create
          ports:
            - containerPort: 443
          resources:
            limits:
              cpu: ".5"
              memory: "500Mi"
            requests:
              cpu: ".25"
              memory: "250Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 4567
            initialDelaySeconds: 3
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: prod-stedi-samantha-nodeport
spec:
  selector:
    app: prod-stedi-samantha
  type: NodePort
  ports:
    - port: 80
      targetPort: 4567
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-stedi-samantha-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: prod-stedi-samantha-public #this IP has not been created yet
    networking.gke.io/managed-certificates: prod-stedi-samantha-certificate
    # kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-stedi-samantha-nodeport #match line 53
            port:
              number: 80
